--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@
 }
 
 body {
-  font-family: mulish;
+  font-family: montserrat;
   background-color: black;
   color: white;
   /* color: rgb(var(--foreground-rgb));
