--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -1,9 +1,66 @@
 
 
 .home_page{
-    /* background-image: url('./image/imagehome2.jpg'); */
-    width: 100%;
-    height: auto;
-    /* background-size: cover; */
+    background-image: url('./image/imagehome2.jpg');
+    width: 1100px;
+    margin: auto;
+    height: 100vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+/* position: absolute; */
+/* background-color: rgba(0,0,0,.6); */
+/* background-color: rgba(48, 47, 47, 0.096); */
+/* z-index: 1; */
+display: flex;
+align-items: center;
+justify-content: center;
+position: absolute;
+top: 0;
+bottom: 0;
+left: 0;
+right: 0;
+background-color: rgba(0,0,0,.6);
+z-index: 1;
 
+/* text-shadow: 3px 3px 3px rgb(236, 6, 6);  */
+}
+/* .home_box2{ */
+/* width: 50%; */
+/* height: 500px; */
+/* border: 1px solid red; */
+/* display: flex; */
+/* justify-content: center; */
+/* align-items: center; */
+/* } */
+.imagehome1 img{ 
+border-radius: 100%;
+margin: auto;
+    /* width: 50%;
+    height: auto;
+    margin: auto; */
+    /* background-image: url('./image/imagehome1.jpg');
+background-size: cover;
+background-repeat: no-repeat; */
+/* border-radius: 50%;
+border: 8px solid gray; */
+
+} 
+.home_text3{
+    width: 100%;
+    text-align: center;
+    font-size: 45px;
+    font-family: 800;
+    float: left;
+    text-align: center;
+    margin-top: 25px;
+}
+.namecolor{
+    color: #e65f78;
+}
+.home_text4{
+    width: 100%;
+    float: left;
+    text-align: center;
+    font-size: 25px;
+    margin-top: 25px;
 }
