--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,8 +18,8 @@
 
 body {
   font-family: montserrat;
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: black;
   /* color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
