--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -3,27 +3,24 @@
 .home_page{
     background-image: url('./image/imagehome2.jpg');
     width: 1100px;
-    margin: auto;
+    margin: 0 auto;
     height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
-/* position: absolute; */
-/* background-color: rgba(0,0,0,.6); */
-/* background-color: rgba(48, 47, 47, 0.096); */
-/* z-index: 1; */
+position: absolute;
+z-index: 1;
 display: flex;
 align-items: center;
 justify-content: center;
-position: absolute;
-top: 0;
-bottom: 0;
-left: 0;
-right: 0;
 background-color: rgba(0,0,0,.6);
-z-index: 1;
+
 
 /* text-shadow: 3px 3px 3px rgb(236, 6, 6);  */
 }
+/* .Image{
+height: 100%;
+width: 100%;
+} */
 /* .home_box2{ */
 /* width: 50%; */
 /* height: 500px; */
